--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@radix-ui/react-popover": "1.0.7",
     "@vercel/postgres": "^0.7.2",
-    "next": "14.0.0",
+    "next": "^14.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
