--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "books-app",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +13,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@radix-ui/react-popover": "1.0.7",
     "@vercel/postgres": "^0.7.2",
+    "dotenv": "^16.4.5",
     "next": "^14.1.2",
     "react": "^18",
     "react-dom": "^18",
